scroll to top fixed med z-index

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -489,6 +489,7 @@ header input[type="submit"]:hover {
      box-shadow: 0px 2px 5px 0px rgb(0, 0, 0, 0.1);
 */
      transition: .5s;
+    z-index: 99;
 }
 
 #scroll span {
